--- a/kuchnie-swiata/index.html
+++ b/kuchnie-swiata/index.html
@@ -13,6 +13,15 @@
              Numquam ad mollitia vero expedita architecto! Exercitationem minima,
               fugit consequuntur facere quis quaerat temporibus fuga ipsum nulla
                veritatis magnam voluptatem, alias voluptas.</p>
+        <p>Ranking popularnych dań</p>
+        <ul>
+            <li>Danie1</li>
+            <li>Danie2</li>
+            <li>Danie3</li>
+            <li>Danie4</li>
+            <li>Danie5</li>
+            
+        </ul>
     </section>
 </body>
 </html>
